--- a/package.json
+++ b/package.json
@@ -42,9 +42,14 @@
   "homepage": "https://github.com/arkeros/startpage#readme",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "localforage": "^1.5.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "redux": "^3.7.2"
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^4.10.1",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
@@ -56,6 +61,21 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "browser-sync": "^2.18.13",
+    "css-loader": "^0.28.7",
+    "isomorphic-style-loader": "^4.0.0",
+    "pixrem": "^4.0.1",
+    "pleeease-filters": "^4.0.0",
+    "postcss-color-function": "^4.0.0",
+    "postcss-custom-media": "^6.0.0",
+    "postcss-custom-properties": "^6.1.0",
+    "postcss-custom-selectors": "^4.0.1",
+    "postcss-flexbugs-fixes": "^3.2.0",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.6",
+    "postcss-media-minmax": "^3.0.0",
+    "postcss-nested": "^2.1.2",
+    "postcss-nesting": "^4.2.1",
+    "postcss-selector-not": "^3.0.1",
     "react-error-overlay": "^1.0.9",
     "react-hot-loader": "^3.0.0-beta.7",
     "webpack": "^3.6.0",
